test/src/e2e_vm_tests/test_programs/should_pass/language/deprecated_attribute/src/main.sw
contract;

#[namespace(my_namespace)]
storage {
    v:u64 = 1,
}

